# ovhomelab

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  remove_pk.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
heat_networks_library/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
heat_networks_library/fixtures/: pipes_gost_3262.json
heat_networks_library/migrations/: 0001_initial.py
heat_networks_library/templates/heat_networks_library/: index.html  pipe_create.html  pipe_list.html
mainapp/: urls.py
mainapp/templates/mainapp/: index.html
ovhomelab/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
project/: admin.py  forms.py  models.py  urls.py  views.py
project/migrations/: 0001_initial.py
project/templates/project/: index.html  project_confirm_delete.html  project_create.html  project_detail.html  project_edit.html  projects_list.html
templates/: 403.html  404.html  base.html
templates/registration/: logged_out.html  login.html
