[tool.poetry]
name = "ovhomelab"
version = "0.1.0"
description = ""
authors = ["Юрий <polyanskii2118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
autopep8 = "^2.1.0"
pylint = "^3.1.0"
pylint-django = "^2.5.5"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
